# MyChatServer

./: CMakeLists.txt  README.md
TestMuduo/: muduo_server.cpp
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  userModel.hpp
include/server/db/: db.h
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  offlinemessagemodel.cpp  userModel.cpp
src/server/db/: db.cpp
src/server/redis/: redis.cpp
